<resources>
    <string name="app_name">My Movie</string>
    <string name="home_label">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_label">Search</string>
    <string name="bookmarks_label">Bookmarks</string>
    <string name="rating" translatable="false">Rating %.1f</string>
    <string name="popular_movie">Popular Movie</string>
    <string name="something_wrong">Opps.. Someting wrong!!</string>
    <string name="status">Status</string>
    <string name="bookmark_button">Bookmark Button</string>
    <string name="year_format" translatable="false">( %s )</string>
    <string name="search_here">Search Here</string>
    <string name="searchbar_hint">Search Here...</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="no_data">You haven\'t added anything to your bookmarks list yet</string>
    <string name="setting_label">Setting</string>
    <string name="chip_label" translatable="false">Chip</string>
    <string name="chose_your_genres">Chose Your Genres</string>
    <string name="retry">Retry</string>
    <string name="sample_keyword">Sample Keyword</string>

    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_auto" translatable="false">auto</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>

    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>
    <string name="pref_dark_title">Theme</string>
    <string name="pref_language_title">Language</string>

    <string name="pref_key_lang" translatable="false">key_lang_mode</string>
    <string name="pref_lang_en" translatable="false">en</string>
    <string name="pref_lang_id" translatable="false">id</string>

    <string name="en_lang">English</string>
    <string name="id_lang">Indonesian</string>
    <string name="settings">Settings</string>
    <string name="accessibility">Accessibility</string>
    <string name="display">Display</string>
    <string name="title_film">Movie Title</string>
    <string name="locale_indonesia" translatable="false">Indonesian</string>
    <string name="locale_english" translatable="false">English</string>
    <string name="setting_title">Setting</string>
    <string name="title_bookmarks" translatable="false">Bookmarks</string>

</resources>