<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        app:title="@string/display"
        >
        <ListPreference
            android:icon="@drawable/baseline_dark_mode_24"
            app:defaultValue="@string/pref_dark_auto"
            app:entries="@array/dark_mode"
            app:entryValues="@array/dark_mode_value"
            app:key="@string/pref_key_dark"
            app:title="@string/pref_dark_title"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/accessibility"
        >
        <ListPreference
            android:icon="@drawable/ic_language"
            app:defaultValue="@string/pref_lang_en"
            app:entries="@array/language_mode"
            app:entryValues="@array/language_mode_value"
            app:key="@string/pref_key_lang"
            app:title="@string/pref_language_title"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>
</PreferenceScreen>