<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_page"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home_label"
        />
    <item
        android:id="@+id/search_page"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search_label"
        />
    <item
        android:id="@+id/bookmarks_page"
        android:enabled="true"
        android:icon="@drawable/ic_bookmarks"
        android:title="@string/bookmarks_label"
        />
    <item
        android:id="@+id/setting_page"
        android:enabled="true"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting_label"
        />
</menu>
